--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
+    "axios": "^1.7.9",
     "nuxt": "^3.14.159",
     "nuxt-auth-sanctum": "^0.5.4",
     "vue": "latest",
